# kotodama

./: .gitignore  OPTIMIZATION_PLAN.md  PROXY-REPORT.md  README.md  pyproject.toml  requirements-shared.txt  serve.py
configs/: 1b-intermediate.yaml  canary-3b-fp8.yaml  canary-3b-mb8.yaml  canary-3b-profile-compile.yaml  canary-3b-profile-nocompile.yaml  canary-3b-tp8.yaml  canary-3b.yaml  canary-8b-fp8.yaml  canary-8b.yaml  checkpoints.yaml  concepts.yaml  model.yaml  openwebtext-ddv1.yaml  prompts.yaml  proxy-benchmark.yaml  training.yaml
docs/: 108m-proxy-matrix-spec.md  analysis-pipeline-spec.md  attnres-performance-brief.md  data-curation-workflow.md  tp-investigation-handoff.md
scripts/: README.md
scripts/analysis/: analyze_concept_geometry.py  analyze_run.py  analyze_text_quality.py  eval_generate.py  eval_via_server.py  extract_activation_geometry.py  extract_concept_geometry.py  generate_report.py  visualize_activation_geometry.py  visualize_concept_geometry.py
scripts/legacy/: bench_attnres.py  bench_attnres_v2.py  run_mini_sweep.sh  run_proxy_sweep.sh  submit_attnres_sweep.py  submit_decay_sweep.py  submit_proxy_sweep.py
scripts/utils/: profile_step.py  pull_metrics.py  smoke_test.py  tokenize_data.py  visualize_nca.py
src/eval/: __init__.py  forward.py  generate.py  metrics_io.py  model_loader.py  perplexity.py  plot_utils.py  run_analysis.py
src/model/: llama.py
src/monitoring/: geometric.py  wandb_callback.py
tools/: extract_benchmark_results.py  parse_profile.py  run_benchmark.sh  run_canary.sh  run_eval.sh  run_train.sh
(+8 files in other folders)
